--- a/templates/manage-layout.tmpl
+++ b/templates/manage-layout.tmpl
@@ -110,7 +110,7 @@
 					<span class="arrow"></span>
 					</a>
 					<ul class="sub-menu">
-						<li><a href="/manage/pic/index.html"><i class="icon-picture"></i> 首页轮播</a></li>
+						<li><a href="/manage/picture/index.html"><i class="icon-picture"></i> 首页轮播</a></li>
 					</ul>
 				</li>
 				<li class="start">
@@ -229,6 +229,8 @@
 <script src="/assets/global/scripts/custom.js"></script>
 <!-- END PAGE LEVEL SCRIPTS -->
 <script>
+
+var KVs = {{.CONTEXT.KVs}};
 
 jQuery(document).ready(function() {
    
