--- a/templates/manage-real-estate-index.tmpl
+++ b/templates/manage-real-estate-index.tmpl
@@ -18,7 +18,7 @@
 								<i class="fa fa-angle-right"></i>
 							</li>
 							<li>
-								<a href="/manage/real-estate.html">新房管理</a>
+								<a href="/manage/real-estate/index.html">新房管理</a>
 								<i class="fa fa-angle-right"></i>
 							</li>
 							<li>
@@ -111,140 +111,16 @@ var PageLogical = function () {
                 	{ "data": "Area.Area", "title":"区域", "targets": 1 , "width":120},
                 	{ "data": "Name", "title":"楼盘名称", "targets": 2,"defaultContent": "", "width":160},
                 	{ "data": "", "title":"楼盘标志", "targets": 3,"defaultContent": "", "width":80},
-                	{ "data": "Stats.Groupon", "title":"团购数", "targets": 4,"defaultContent": "", "width":80},
+                	{ "data": "ST.Groupon", "title":"团购数", "targets": 4,"defaultContent": "", "width":80},
                 	{ "data": "MTime.Created", "title":"付费状态 ", "targets": 5,"defaultContent": "", "width":90, "render": t2d},
                 	{ "data": "MTime.Changed", "title":"更新时间", "targets": 6,"defaultContent": "", "width":90, "render": t2d},
-                	{ "title":"通过", "defaultContent": "", "targets": 5, "width": 40},
-                	{ "data": "", "title":"操作", "width":90 , "targets": 7, "defaultContent": "<button class='edit'>编辑</button> <button class='delete'>删除</button>"},
+                	{ "data": "Status.Disabled", "title":"通过", "defaultContent": "", "targets": 7, "width": 32, "render": btn_disable},
+                	{ "data": "", "title":"操作", "width":90 , "targets": 8, "defaultContent": "<button class='edit'>编辑</button> <button class='delete'>删除</button>"},
                 ]
             }
         });
         
-        $("#button-add").click(function(){
-        	
-        	$("#modal-form form").first().each(function(){
-        		
-        		this.reset();
-        		$(this).validate().resetForm();
-        	})
-        });
-        
-        $("#button-search").click(function(){
-        	
-        	var title = $("#search-name").val().trim();
-            grid.setAjaxParam("name", title);
-            grid.getDataTable().ajax.reload();
-            grid.clearAjaxParams();
-        });
-        
-        $("#button-save").click(function(){
-        	
-        	if(!$("#modal-form form").valid()){
-        		return;
-        	}
-        	
-        	var obj = $("#modal-form form").serializeJSON();
-        	
-        	$.ajax({
-        		
-        		"url": "/manage/real-estate/upsert.json",
-        		"method": "POST",
-        		"dataType":"JSON",
-        		"contentType":"application/json",
-        		"data": JSON.stringify(obj)
-        	}).success(function(){
-        		
-        		$("#modal-form").modal("hide");
-        		grid.getDataTable().ajax.reload();
-        		
-        		Metronic.alert({
-                    type: 'success',
-                    icon: 'check',
-                    message: '更新成功...',
-                    container: grid.getTableWrapper(),
-                    place: 'prepend',
-                    closeInSeconds: 3
-                });
-        		
-        	}).fail(function(){
-        		
-        		$("#modal-form").modal("hide");
-        		Metronic.alert({
-                    type: 'danger',
-                    icon: 'danger',
-                    message: '更新失败...',
-                    container: grid.getTableWrapper(),
-                    place: 'prepend'
-                });
-        	})
-        });
-        
-        grid.getTableWrapper().on('click', '.edit', function(e){
-        	
-        	$(this).parents("table").first().find(".selected").removeClass("selected");
-        	$(this).parents("tr").first().addClass("selected");
-			
-        	$("#modal-form form").first().each(function(){
-        		
-        		this.reset();
-        		$(this).validate().resetForm();
-        	})
-        	var row = grid.getDataTable().row(".selected").data();
-        	window.location.href = "./form.html?Id=" + row.Id;
-        });
-        
-        grid.getTableWrapper().on('click', '.delete', function(e){
-        	
-        	var that = this;
-        	
-        	bootbox.confirm("是否确认删除?", function(ok) {
-        		
-        		if(!ok) return;
-        		
-	        	$(that).parents('tr').first().find("input[type=checkbox]").trigger("click")
-	        	grid.setAjaxParam("action", "delete");
-	            grid.setAjaxParam("id", grid.getSelectedRows());
-	            grid.getDataTable().ajax.reload();
-	            grid.clearAjaxParams();
-            }); 
-        })
-        
-        grid.getTableWrapper().on('click', '.table-group-action-submit', function (e) {
-        	
-            e.preventDefault();
-            
-            var action = $(".table-group-action-input", grid.getTableWrapper());
-            if (action.val() != "" && grid.getSelectedRowsCount() > 0) {
-            	
-            	bootbox.confirm("是否确认删除?", function(ok) {
-            		
-            		if(!ok) return;
-            		
-	                grid.setAjaxParam("action", action.val());
-	                grid.setAjaxParam("id", grid.getSelectedRows());
-	                grid.getDataTable().ajax.reload();
-	                grid.clearAjaxParams();
-            	});
-            } else if (action.val() == "") {
-            	
-                Metronic.alert({
-                    type: 'warning',
-                    icon: 'warning',
-                    message: '请选择一种操作...',
-                    container: grid.getTableWrapper(),
-                    place: 'prepend'
-                });
-            } else if (grid.getSelectedRowsCount() === 0) {
-            	
-                Metronic.alert({
-                    type: 'warning',
-                    icon: 'warning',
-                    message:'未选中任何数据...',
-                    container: grid.getTableWrapper(),
-                    place: 'prepend'
-                });
-            }
-        });
+        gridBindings(grid);
     }
 
     return {
