--- a/templates/index-layout.tmpl
+++ b/templates/index-layout.tmpl
@@ -21,9 +21,9 @@
 					<li class='hoverable clickable'><i class='icon-thumb'>&nbsp;</i><a href='/groupbuy/'>团购</a></li>
 				</ul>
 				<ul class='user'>
-					<li class='hoverable clickable'><a href='/login.html'>登录</a></li>
-					<li class='hoverable clickable padding'><a>|</a></li>
 					<li class='hoverable clickable'><a href='/register.html'>注册</a></li>
+					<li class='hoverable clickable padding'><a>|</a></li>
+					<li class='hoverable clickable'><a href='/login.html'>登录</a></li>
 					<li class='hoverable clickable'><i class='icon-user'></i></li>
 				</ul>
 			</div>
@@ -33,6 +33,26 @@
 	<div id='bd'>{{ yield }}</div>
 	
 	{{template "ft" .}}
+	
+	<script type="text/javascript">
+	$(function(){
+		
+		$(".datas .data-selector").hover(function(){
+			
+			var that = this;
+			$(".datas .data-selector.data-selector-selected").removeClass("data-selector-selected");
+			$(that).addClass("data-selector-selected");
+			
+			setTimeout(function(){
+				
+				if($(that).hasClass("data-selector-selected")) {
+					$(".datas").find(".dataset").hide();
+					$(".datas").find($(that).attr("data-for")).fadeIn();
+				}
+			}, 200)
+		}, function(){})
+	})
+	</script>
 	
 </body>
 </html>
