--- a/templates/manage-news-index.tmpl
+++ b/templates/manage-news-index.tmpl
@@ -18,7 +18,7 @@
 								<i class="fa fa-angle-right"></i>
 							</li>
 							<li>
-								<a href="/manage/news.html">资讯管理</a>
+								<a href="/manage/news/index.html">资讯管理</a>
 								<i class="fa fa-angle-right"></i>
 							</li>
 							<li>
@@ -105,153 +105,27 @@ var PageLogical = function () {
                 },
                 "ordering": false,
                 "columns": [
-                	{ "name": "","data": "Id","class":"table-checkbox","title":'<input type="checkbox" class="group-checkable" />', "targets": 1, "width": 24, "render": function(data){
-                		return "<input type='checkbox' value='"+ data +"' />"
-                	}},
-                	{ "data": "Category", "title":"主类别", "targets": 1 , "width":120,"defaultContent": "", "render": function(data) {
+                	{ "name": "","data": "Id","class":"table-checkbox","title":'<input type="checkbox" class="group-checkable" />', "targets": 1, "width": 24, "render": btn_id},
+                	{ "data": "Category", "title":"主类别", "targets": 1 , "width":80,"defaultContent": "", "render": function(data) {
                 		if(data && data.length > 0) {
                 			return data[0].Name
                 		}
                 		return ""
                 	}},
-                	{ "data": "Title", "title":"标题", "targets": 2,"defaultContent": "", "width":160},
-                	{ "data": "", "title":"缩略图", "targets": 3,"defaultContent": "", "width":80},
+                	{ "data": "Title", "title":"标题", "targets": 2,"defaultContent": ""},
+                	{ "data": "", "title":"封面", "targets": 3,"defaultContent": "", "width":80},
                 	{ "data": "Time", "title":"发布日期", "targets": 4,"defaultContent": "", "width":120, "render": t2dt},
-                	{ "data": "Stats.Comments", "title":"评论", "targets": 5,"defaultContent": "", "width":90},
-                	{ "data": "", "title":"多图", "targets": 6,"defaultContent": "", "width":90},
+                	{ "data": "ST.Comments", "title":"评论", "targets": 5,"defaultContent": "0", "width":60},
                 	{ "data": "MTime.Clicked", "title":"点击量", "targets": 7,"defaultContent": "", "width":60},
-                	{ "title":"通过", "defaultContent": "", "targets": 8, "width": 40},
-                	{ "title":"首显", "defaultContent": "", "targets": 9, "width": 40},
+                	{ "data": "Status.Disabled", "title":"通过", "defaultContent": "", "targets": 8, "width": 32, "render": btn_disable},
+                	{ "data": "Status.Recommended","title":"推荐", "defaultContent": "", "targets": 9, "width": 32, "render": btn_recommend},
+                	{ "data": "Status.Indexed","title":"首显", "defaultContent": "", "targets": 9, "width": 32, "render": btn_index},
                 	{ "data": "", "title":"操作", "width":90 , "targets": 10, "defaultContent": "<button class='edit'>编辑</button> <button class='delete'>删除</button>"}
                 ]
             }
         });
         
-        $("#button-add").click(function(){
-        	
-        	$("#modal-form form").first().each(function(){
-        		
-        		this.reset();
-        		$(this).validate().resetForm();
-        	})
-        });
-        
-        $("#button-search").click(function(){
-        	
-        	var title = $("#search-name").val().trim();
-            grid.setAjaxParam("name", title);
-            grid.getDataTable().ajax.reload();
-            grid.clearAjaxParams();
-        });
-        
-        $("#button-save").click(function(){
-        	
-        	if(!$("#modal-form form").valid()){
-        		return;
-        	}
-        	
-        	var obj = $("#modal-form form").serializeJSON();
-        	
-        	$.ajax({
-        		
-        		"url": "/manage/news/upsert.json",
-        		"method": "POST",
-        		"dataType":"JSON",
-        		"contentType":"application/json",
-        		"data": JSON.stringify(obj)
-        	}).success(function(){
-        		
-        		$("#modal-form").modal("hide");
-        		grid.getDataTable().ajax.reload();
-        		
-        		Metronic.alert({
-                    type: 'success',
-                    icon: 'check',
-                    message: '更新成功...',
-                    container: grid.getTableWrapper(),
-                    place: 'prepend',
-                    closeInSeconds: 3
-                });
-        		
-        	}).fail(function(){
-        		
-        		$("#modal-form").modal("hide");
-        		Metronic.alert({
-                    type: 'danger',
-                    icon: 'danger',
-                    message: '更新失败...',
-                    container: grid.getTableWrapper(),
-                    place: 'prepend'
-                });
-        	})
-        });
-        
-        grid.getTableWrapper().on('click', '.edit', function(e){
-        	
-        	$(this).parents("table").first().find(".selected").removeClass("selected");
-        	$(this).parents("tr").first().addClass("selected");
-			
-        	$("#modal-form form").first().each(function(){
-        		
-        		this.reset();
-        		$(this).validate().resetForm();
-        	})
-        	var row = grid.getDataTable().row(".selected").data();
-        	window.location.href = "./form.html?Id=" + row.Id;
-        });
-        
-        grid.getTableWrapper().on('click', '.delete', function(e){
-        	
-        	var that = this;
-        	
-        	bootbox.confirm("是否确认删除?", function(ok) {
-        		
-        		if(!ok) return;
-        		
-	        	$(that).parents('tr').first().find("input[type=checkbox]").trigger("click")
-	        	grid.setAjaxParam("action", "delete");
-	            grid.setAjaxParam("id", grid.getSelectedRows());
-	            grid.getDataTable().ajax.reload();
-	            grid.clearAjaxParams();
-            }); 
-        })
-        
-        grid.getTableWrapper().on('click', '.table-group-action-submit', function (e) {
-        	
-            e.preventDefault();
-            
-            var action = $(".table-group-action-input", grid.getTableWrapper());
-            if (action.val() != "" && grid.getSelectedRowsCount() > 0) {
-            	
-            	bootbox.confirm("是否确认删除?", function(ok) {
-            		
-            		if(!ok) return;
-            		
-	                grid.setAjaxParam("action", action.val());
-	                grid.setAjaxParam("id", grid.getSelectedRows());
-	                grid.getDataTable().ajax.reload();
-	                grid.clearAjaxParams();
-            	});
-            } else if (action.val() == "") {
-            	
-                Metronic.alert({
-                    type: 'warning',
-                    icon: 'warning',
-                    message: '请选择一种操作...',
-                    container: grid.getTableWrapper(),
-                    place: 'prepend'
-                });
-            } else if (grid.getSelectedRowsCount() === 0) {
-            	
-                Metronic.alert({
-                    type: 'warning',
-                    icon: 'warning',
-                    message:'未选中任何数据...',
-                    container: grid.getTableWrapper(),
-                    place: 'prepend'
-                });
-            }
-        });
+        gridBindings(grid);
     }
 
     return {
