--- a/templates/newhouse-list.tmpl
+++ b/templates/newhouse-list.tmpl
@@ -46,6 +46,40 @@
 					
 					<div class='block-list block block-boundless'>
 						<div class='bd'>
+							{{ range .Page.Data}}
+							<div class='item hoverable'>
+								<div class='image'>
+									<img width=250 height=130 src='/images/newhouse/sample-list.jpg' />
+								</div>
+								<div class='description'>
+									<dl class='clearfix'>
+										<dt>
+											<h2><a href='#'><b>{{.Name}}</b></a></h2>
+											<p>[{{.Area.Area}}] {{.Address}}</p>
+											<p>主推户型：4居室110平米； 3居室82平米</p>
+											<ul>
+												<li>复合地产</li>
+												<li>大型社区</li>
+												<li>车位充足</li>
+											</ul>
+										</dt>
+										<dd>
+											<p>团购均价:<span class='featured f18'>{{if .GroupPrice}}{{.GroupPrice}}{{end}}</span>元/㎡</p>
+											<p class='featured'>{{if .GroupDescription}}{{.GroupDescription}}{{end}}</p>
+										</dd>
+									</dl>
+									<dl class='clearfix'>
+										<dt class='f16 primary'>
+											400-700-1234 转 6486
+										</dt>
+										<dd>
+											<a href='#' class='btn btn-small btn-featured'>我要团购</a>
+										</dd>
+									</dl>
+								</div>
+							</div>
+							{{ end }}
+							
 							<div class='item hoverable'>
 								<div class='image'>
 									<img width=250 height=130 src='/images/newhouse/sample-list.jpg' />
@@ -338,17 +372,23 @@
 							</div>
 						</div>
 						<div class='ft'>
-						
+							
 							<ul class='pager'>
-								<li class='hoverable clickable'><a href='#'>&lt;上一页</a></li>
-								<li class='hoverable clickable active'><a href='#'>1</a></li>
-								<li class='hoverable clickable'><a href='#'>2</a></li>
-								<li class='hoverable clickable'><a href='#'>3</a></li>
-								<li class='hoverable clickable'><a href='#'>4</a></li>
-								<li class='hoverable clickable'><a href='#'>5</a></li>
-								<li class='text'>…</li>
-								<li class='hoverable clickable'><a href='#'>20</a></li>
-								<li class='hoverable clickable'><a href='#'>下一页&gt;</a></li>
+								<li class='{{if eq .Page.Page.Previous 0}}disabled{{end}} hoverable clickable'><a href='#'>&lt;上一页</a></li>
+								{{ range .Page.Page.List }}
+									{{ if eq . 0 }}
+										<li class='text'>…</li>
+									{{else}}
+										<li class='{{if eq . $.Page.Page.Current | not}}hoverable clickable{{end}} {{if eq . $.Page.Page.Current}}active{{end}}'>
+											{{if eq . $.Page.Page.Current}}
+												{{.}}
+											{{else}}
+												<a href='#'>{{.}}</a>
+											{{end}}
+										</li>
+									{{ end }}
+								{{ end }}
+								<li class='{{if eq .Page.Page.Next 0}}disabled{{end}} hoverable clickable'><a href='#'>下一页&gt;</a></li>
 							</ul>
 						</div>
 					</div>
