--- a/templates/news-index.tmpl
+++ b/templates/news-index.tmpl
@@ -31,19 +31,18 @@
 				<div class='left-400-30'>
 					<div class='block-news-focus block block-boundless'>
 						<div class='hd'>
-							<div class='more f16'>2015-02-15 星期日</div>
+							<div class='more f16'>{{.Date}} {{.Weekday}}</div>
 							<h1>要闻推荐</h1>
 						</div>
 						<div class='bd f13'>
-							<h2 class='l3 bold'><nobr>北京佳兆业广场施工缓慢 能否如期入市存疑</nobr></h2>
-							<blockquote class='f12 quote'>2014年嘉兴共出让105宗地块，土地出让面积约278.96万方，同比去年下同比去年下同比去年下滑...</blockquote>
+							{{range slice .Recommends 0 1}}
+								<h2 class='l3 bold'><a href='{{.SURL}}'><nobr>{{.Title}}</nobr></a></h2>
+								<blockquote class='f12 quote'>{{.Brief}}</blockquote>
+							{{ end }}
 							<ul>
-								<li class='l2'><i class='icon-dot'></i> <a href='#'>绿地地产销售冲击2800亿 上半年有望完成上市 </a></li>
-								<li class='l2'><i class='icon-dot'></i> <a href='#'>绿地地产销售冲击2800亿 上半年有望完成上市 </a></li>
-								<li class='l2'><i class='icon-dot'></i> <a href='#'>绿地地产销售冲击2800亿 上半年有望完成上市 </a></li>
-								<li class='l2'><i class='icon-dot'></i> <a href='#'>绿地地产销售冲击2800亿 上半年有望完成上市 </a></li>
-								<li class='l2'><i class='icon-dot'></i> <a href='#'>绿地地产销售冲击2800亿 上半年有望完成上市 </a></li>
-								<li class='l2'><i class='icon-dot'></i> <a href='#'>绿地地产销售冲击2800亿 上半年有望完成上市 </a></li>
+								{{range slice .Recommends 1 7}}
+									<li class='l2'><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+								{{ end }}
 							</ul>
 						</div>
 					</div>
